<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    android:gravity="center"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="383dp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="12dp"
            android:paddingTop="24dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <TextView
                android:id="@+id/loginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loginText"
                android:textAlignment="center"
                android:textColor="@color/indigo"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:autofillHints="password"
                android:drawableStart="@drawable/baseline_accessibility_24"
                android:drawablePadding="8dp"
                android:hint="@string/Username"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@color/indigo" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:autofillHints="name"
                android:drawableStart="@drawable/rounded_app_blocking_24"
                android:drawablePadding="8dp"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/indigo" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/indigo"
                android:onClick="loginButton"
                android:padding="10dp"
                android:text="@string/loginTextButton"
                android:textSize="20sp"
                app:cornerRadius="10dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:background="?android:attr/selectableItemBackground"
                android:onClick="registerButton"
                android:text="@string/Reg"
                android:textAlignment="center"
                android:textColor="@color/indigo"
                android:textSize="22sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>
